# ChartDigest

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_episode_state_versions.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  app_settings.py  case.py  document.py  episode_state_version.py  job.py  mixins.py  summary.py
backend/app/providers/: base.py  factory.py  ollama.py
backend/app/schemas/: case.py  document.py  episode_state.py  job.py  provider.py  settings.py
backend/app/services/: case_service.py  chunking.py  document_service.py  episode_state_service.py  processing_service.py  settings_service.py
backend/app/tests/: conftest.py  test_chunking.py  test_episode_state_service.py  test_ollama_provider.py  test_processing_pipeline.py
backend/chart_digest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css
scripts/: launch_local.sh  stop_local.sh
